# Taller2

./: .gitignore  .travis.yml  Dockerfile  README.md  Udrive.iml~  build.gradle~  changelog.autogenerado.md  changelog.md  generar_cov_doc.sh  local.properties  local.properties~
Documentation/: Makefile  conf.py  doc.sh  index.rst  index.rst~
Documentation/Admin/: guiaAdministrador.rst
Documentation/Tecnica/: docTecnica.rst  pruebas.rst  tecnoUsada.rst
Documentation/Usuario/: guiaUsuario.rst  manualdeusuario.rst  manualdeusuario.rst~  manualdeusuario.txt~
Documentation/src/: cliente.rst  servidor.rst
app/: Doxyconf  build.gradle  local.properties
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: borderbutton.xml  radioussolidbutton.xml
app/src/main/res/layout/: activity_edit_profile.xml  activity_files_in_folder.xml  activity_list_item_details.xml  activity_location_found.xml  activity_login.xml  activity_main.xml  activity_main2.xml  activity_profile.xml  activity_register.xml  activity_search_results.xml  activity_second.xml  activity_splash_screen.xml  activity_upload_file.xml  activity_users.xml  app_bar_main.xml  app_bar_main2.xml  content_edit_profile.xml  content_main.xml  content_main2.xml  content_second.xml  content_upload_file.xml  dialog_new_folder.xml  dialog_share_item.xml  drawer_item.xml  fragment_end_session.xml  fragment_home.xml  fragment_information.xml  fragment_ip.xml  fragment_item_grid_bin.xml  fragment_item_list_bin.xml  fragment_main.xml  fragment_navigation_drawer.xml  (+10 more)
docker/: Dockerfile
gradle/wrapper/: gradle-wrapper.properties
servidor/: CMakeLists.txt  CMakeLists.txt~  Doxyconf  ayuda.txt  coverage.sh  install_dependencies.sh  primerEjemplo.cpp  run.sh  run_tests.sh
servidor/src/: main.cpp  testDB.cpp
servidor/src/archivos/: Archivo.cpp  Archivo.h  Carpeta.cpp  Carpeta.h  ManagerArchivos.cpp  ManagerArchivos.h
servidor/src/bd/: ClaveRocksDB.h  JsonInfo.cpp  JsonInfo.h  ManagerBD.cpp  ManagerBD.h  rocks_db.cpp  rocks_db.h
servidor/src/bd/entidades/: Archivo.cpp  Archivo.h  ArchivoCompartirConUsuarios.cpp  ArchivoCompartirConUsuarios.h  ArchivoLogico.cpp  ArchivoLogico.h  CarpetaCompartirConUsuarios.cpp  CarpetaCompartirConUsuarios.h  CarpetaLogica.cpp  CarpetaLogica.h  ClaveRocksDB.h  ContenidoPorCarpeta.cpp  ContenidoPorCarpeta.h  EntidadBD.cpp  EntidadBD.h  User.cpp  User.h  VersionDeArchivoPorUsuario.cpp  VersionDeArchivoPorUsuario.h
servidor/src/clases/: User.cpp  User.h
servidor/src/conexion/: Conexion.cpp  Conexion.cpp~  Conexion.h  HandlerEventos.cpp  HandlerEventos.h  Respuesta.cpp  Respuesta.h  Servidor.cpp  Servidor.h  ServidorMultihilo.cpp  ServidorMultihilo.h
servidor/src/conexion/request/: DELETE.cpp  DELETE.h  GET.cpp  GET.h  IMetodoREST.h  POST.cpp  POST.cpp~  POST.h  PUT.cpp  PUT.h  URI.cpp  URI.h
servidor/src/database/: rocks_db.cpp  rocks_db.h
servidor/src/operaciones/: Acciones.cpp  Acciones.h  CreadorDeOperaciones.cpp  CreadorDeOperaciones.h  IOperable.h  InfoOperaciones.cpp  InfoOperaciones.h  OperacionBusqueda.cpp  OperacionBusqueda.h  OperacionCompartirArchivo.cpp  OperacionCompartirArchivo.h  OperacionCompartirCarpeta.cpp  OperacionCompartirCarpeta.h  OperacionDescargarArchivo.cpp  OperacionDescargarArchivo.h  OperacionErrorURL.cpp  OperacionErrorURL.h  OperacionPrincipal.cpp  OperacionPrincipal.h  OperacionesArchivos.cpp  OperacionesArchivos.h  OperacionesCarpetas.cpp  OperacionesCarpetas.h  OperacionesPapelera.cpp  OperacionesPapelera.h  OperacionesUsuario.cpp  OperacionesUsuario.h
servidor/src/utiles/: Bytes.cpp  Bytes.h  LectorParametros.cpp  LectorParametros.h  Log.cpp  Log.h  base64.h  log.h  utiles.h  utiles.h~
servidor/test/: CMakeLists.txt  correrTests.cpp
servidor/test-api/: data2.json  data3.json  subirArchivo.sh  verbosHTTP.sh
servidor/test-api/test archivos/: COMO TESTEAR.txt  eliminarArchivo.sh  modificarArchivo.sh  modificarArchivoPOST.sh  pathDelArchivoARecuperar.json  recuperarArchivo.sh  subirArchivo.sh  subirArchivoBytes.json  subirArchivoDatos.json  subirArchivoNUEVO.sh
servidor/test-api/test buscar/: buscarArchivo.sh
servidor/test-api/test carpetas/: carpetaConContenido.json  carpetaVacia.json  crearCarpeta.sh  eliminarCarpeta.sh  recuperarContenidoCarpeta.sh  recuperarDatosCarpeta.sh
servidor/test-api/test compartir archivos/: compartirArchivo.sh  modificarPorUnAmigo.sh  verCompartidosConmigo.sh
servidor/test-api/test compartir carpetas/: carpetaACompartir.json  compartirCarpeta.sh
servidor/test-api/test descargar archivo/: descargarArchivo.sh
servidor/test-api/test papelera/: eliminarArchivo.sh  recuperarPapelera.sh  restaurarArchivoDePapelera.sh  restaurarCarpetaDePapelera.sh
servidor/test-api/test principal/: accederAMenuPrincipal.sh  usuario.json  usuario2.json  usuario3.json
servidor/test-api/test usuarios/: crearUsuario.sh  mailypassword.json  obtenerUsuario.sh  registrarUsuarios.sh  usuario3.json  usuario4.json
servidor/test/archivos/: ArchivoTest.cpp  ArchivoTest.h  CarpetaTest.cpp  CarpetaTest.h  ManagerArchivosTest.cpp  ManagerArchivosTest.h
servidor/test/bd/: JsonInfoTest.cpp  JsonInfoTest.h  ManagerBDTest.cpp  ManagerBDTest.h  rocksdbTest.cpp  rocksdbTest.h
servidor/test/bd/entidades/: ArchivoCompartirConUsuarioTest.cpp  ArchivoCompartirConUsuarioTest.h  ArchivoLogicoTest.cpp  ArchivoLogicoTest.h  CarpetaCompartirConUsuariosTest.cpp  CarpetaCompartirConUsuariosTest.h  CarpetaLogicaTest.cpp  CarpetaLogicaTest.h  ContenidoPorCarpetaTest.cpp  ContenidoPorCarpetaTest.h  UserTest.cpp  UserTest.h  VersionDeArchivoPorUsuarioTest.cpp  VersionDeArchivoPorUsuarioTest.h
servidor/test/conexion/: ConexionTest.cpp  ConexionTest.h  RespuestaTest.cpp  RespuestaTest.h  URITest.cpp  URITest.h
servidor/test/operaciones/: AccionesTest.cpp  AccionesTest.h  CreadorDeOperacionesTest.cpp  CreadorDeOperacionesTest.h  OperacionBusquedaTest.cpp  OperacionBusquedaTest.h
servidor/test/utiles/: utilesTest.cpp  utilesTest.h
servidor/tests/: llamadasConsecutivas.sh  llamadasSimultaneas.sh
(+56 files in other folders)
